--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -226,6 +226,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gdown\n",
+      "  Obtaining dependency information for gdown from https://files.pythonhosted.org/packages/cb/56/f4845ed78723a4eb8eb22bcfcb46e1157a462c78c0a5ed318c68c98f9a79/gdown-5.1.0-py3-none-any.whl.metadata\n",
+      "  Downloading gdown-5.1.0-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from gdown) (4.12.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from gdown) (3.9.0)\n",
+      "Requirement already satisfied: requests[socks] in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from gdown) (2.31.0)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from gdown) (4.65.0)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from beautifulsoup4->gdown) (2.4)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from requests[socks]->gdown) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from requests[socks]->gdown) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from requests[socks]->gdown) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from requests[socks]->gdown) (2023.11.17)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from requests[socks]->gdown) (1.7.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\subhr\\anaconda3\\lib\\site-packages (from tqdm->gdown) (0.4.6)\n",
+      "Downloading gdown-5.1.0-py3-none-any.whl (17 kB)\n",
+      "Installing collected packages: gdown\n",
+      "Successfully installed gdown-5.1.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown\n",
+    "url = \"https://drive.google.com/file/d/1NF_j8W2osQ3Ra0MwiQsAg-EVrN0KgydW/view?usp=sharing\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1NF_j8W2osQ3Ra0MwiQsAg-EVrN0KgydW'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "link = url.split(\"/\")[-2]\n",
+    "link\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?/export=download&id=1NF_j8W2osQ3Ra0MwiQsAg-EVrN0KgydW\n",
+      "To: c:\\Users\\Subhr\\Documents\\github\\ML\\mlops\\research\\kidney-CT-Scan-data.zip\n",
+      "100%|██████████| 7.98M/7.98M [00:00<00:00, 16.4MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix+link, \"kidney-CT-Scan-data.zip\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
